Adicionei outro titulo no cabeçalho

--- a/ex-05/index.html
+++ b/ex-05/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EXERCICIO 5</title>
 </head>
+<header>
+    <h1>claudney alves de souza</h1>
+    <h2>TESTE DE SEGUNDA VERSAO DO GIT HUB</h2>
+</header>
 <body>
     <p><b>Algumas marcas (em bold por exemplo !!!!)</b></p>
     <p><i>Este parágrafo está em itálico</i></p>
